--- a/locales/de.yaml
+++ b/locales/de.yaml
@@ -2,12 +2,13 @@ button:
   about: Über
   back: Zurück
   go: Los
-  home: Home
-  toggle_dark: Dark Mode aktivieren
-  toggle_langs: Sprache wechseln
+  home: Startseite
+  toggle_dark: Dunkelmodus umschalten
+  toggle_langs: Sprachen ändern
 intro:
-  desc: Opinionated Vite Starter Template
+  desc: Vite Startvorlage mit Vorlieben
   dynamic-route: Demo einer dynamischen Route
-  hi: Hallo {name}!
-  whats-your-name: Wie heisst du?
+  hi: Hi, {name}!
+  aka: Auch bekannt als
+  whats-your-name: Wie heißt du?
 not-found: Nicht gefunden
